<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"

        />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search"

        />
    <item
        android:id="@+id/navigation_panier"
        android:icon="@drawable/ic_outline_shopping_basket_24"
        android:title="@string/title_basket"

        />
    <item
        android:id="@+id/navigation_favoris"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/title_favorite"

        />


    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/title_profil" />


<!--    <item-->
<!--        android:id="@+id/navigation_deconnecter"-->
<!--        android:icon="@drawable/ic_baseline_exit_to_app_24"-->
<!--        android:title="@string/logout" />-->

</menu>