<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:background="@android:color/transparent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"

            android:contentDescription="@string/close"
            android:id="@+id/close_btn"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_regular"
            android:textSize="35sp"
            android:textAllCaps="true"
            android:text="@string/inscription"
            android:layout_marginTop="50dp"
            android:textColor="@color/noir"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/nom_prenom"
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:id="@+id/nom_et"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/nom"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"

                android:inputType="textPersonName"
                android:importantForAutofill="no" />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:id="@+id/prenom_et"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/prenom"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"

                android:inputType="textPersonName"
                android:importantForAutofill="no" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/cin"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/cin_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/cin"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:inputType="number"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/email"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/email_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/adresse"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/adresse_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/adresse"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/telephone"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/tel_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/tun_number"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:inputType="phone"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/mot_de_passe"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/mdp_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/mot_de_passe"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:drawableEnd="@drawable/ic_outline_visibility_24"


            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="50dp"
            android:text="@string/inscription"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/inscription_btn"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/connexion_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deja_compte"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connexion"
                android:layout_marginStart="10dp"
                android:textColor="@color/orange"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
