<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_close_24"
        android:background="@android:color/transparent"
        android:layout_gravity="start"

        android:contentDescription="@string/close"
        android:layout_weight="1"

        android:id="@+id/close_btn"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/bebasneue_regular"
        android:textSize="35sp"
        android:textAllCaps="true"
        android:text="@string/connexion"
        android:layout_marginTop="50dp"
        android:textColor="@color/noir"
        android:layout_weight="1"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/email_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="@color/vert"
            android:text="@string/mot_de_passe"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/mdp_et"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/mot_de_passe"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:drawableEnd="@drawable/ic_outline_visibility_24"

            android:inputType="textPassword"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:textColor="@color/gris"
            android:text="@string/mdp_oublie"
            android:layout_marginTop="10dp"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="50dp"
            android:text="@string/connexion"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"

            android:id="@+id/connexion_btn"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/s_inscrire_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pas_compte"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_inscrire"
                android:layout_marginStart="10dp"
                android:textColor="@color/vert"
                />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
