<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.panier.PanierFragment"
    android:orientation="vertical"

    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        android:background="@android:color/transparent"
        android:layout_gravity="start"

        android:contentDescription="@string/close"
        android:layout_weight="1"

        android:id="@+id/back_btn"
        android:layout_margin="20dp"



        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/bebasneue_regular"
        android:textSize="35sp"
        android:textAllCaps="true"
        android:text="@string/panier"
        android:layout_marginTop="50dp"
        android:textColor="@color/noir"
        android:layout_weight="1"
        android:layout_margin="20dp"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.15"

        android:id="@+id/panier_rv"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="50dp"
        android:text="@string/paiement"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"

        android:id="@+id/maj_btn"
        android:layout_margin="20dp"

        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>