<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.home.HomeFragment"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/blanc"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/bebasneue_regular"
        android:letterSpacing="0.01"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="50dp"
            android:text="@string/animaly_shop"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="50dp"
            android:text="@string/animaly_tinder"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"

            />
    </LinearLayout>

</LinearLayout>